--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driverClass=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://115.28.129.88:3689/snailbaba
+jdbcUrl=jdbc:mysql://localhost:3306/db
 user=root
 password=root
 maxPoolSize=10
