--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project name="HelloWorld" default="run" basedir=".">
-    <property name="tomapp" value="/usr/local/tomcat7/webapps/snailbaba"/>
+<project name="project" default="run" basedir=".">
+    <property name="tomapp" value="/usr/local/tomcat7/webapps/ROOT"/>
     <target name="run">
         <copy todir="${tomapp}">
-            <fileset dir="target/snailbaba"/>
+            <fileset dir="target/jfinal-template"/>
         </copy>
     </target>
 </project>
