--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven.compiler.compilerVersion>1.6</maven.compiler.compilerVersion>
         <projectName>jfinal-template</projectName>
         <jettyPort>8088</jettyPort>
