--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driverClass=com.mysql.jdbc.Driver
 jdbcUrl=jdbc:mysql://localhost:3306/db
 user=root
-password=root
+password=
 maxPoolSize=10
 minPoolSize=1
 initialPoolSize=1
