--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driverClass=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://localhost:3306/db
+jdbcUrl=jdbc:mysql://localhost:3306/jfinal-api-scaffold
 user=root
 password=
 maxPoolSize=10
